@startuml
skinparam classAttributeIconSize 0

class Main {
  +main(args: String[]): void
}

class DirectedGraph {
  -cities: List<String>
  -indexes: Map<String, Integer>
  -adjacency: int[][]
  +addCity(city: String): void
  +addEdge(origin: String, destination: String, distance: int): void
  +removeEdge(origin: String, destination: String): void
  +getCities(): List<String>
  +getDistance(origin: String, destination: String): int
  +copyAdjacencyMatrix(): int[][]
}

class GraphFileReader {
  +read(path: Path): DirectedGraph
}

class FloydWarshall {
  +calculate(graph: DirectedGraph): FloydResult
}

class FloydResult {
  -cities: List<String>
  -distances: int[][]
  -next: int[][]
  +distanceBetween(origin: String, destination: String): int
  +pathBetween(origin: String, destination: String): List<String>
  +center(): String
  +eccentricities(): Map<String, Integer>
}

class MatrixFormatter {
  +formatAdjacency(graph: DirectedGraph): String
  +formatDistances(result: FloydResult): String
}

Main --> GraphFileReader
Main --> DirectedGraph
Main --> FloydWarshall
Main --> MatrixFormatter
GraphFileReader --> DirectedGraph
FloydWarshall --> DirectedGraph
FloydWarshall --> FloydResult
@enduml

